feat: РІС‹РїРѕР»РЅРµРЅ РїСѓРЅРєС‚ 2 - СѓРґР°Р»РµРЅС‹ Р±Р»РѕРєРё РґРѕРІРµСЂРёСЏ Рё С†РµРЅ, РґРѕР±Р°РІР»РµРЅ РїСѓРЅРєС‚ РІ РїСЂРµРёРјСѓС‰РµСЃС‚РІР°

--- a/src/html/partials/advantages.html
+++ b/src/html/partials/advantages.html
@@ -39,6 +39,13 @@
                         <h3 class="advantages__item-title">Гарантия 5 лет</h3>
                         <p class="advantages__item-text">Официальная гарантия на все виды работ. Защита ваших инвестиций.</p>
                     </div>
+                    <div class="advantages__item">
+                        <div class="advantages__icon">
+                            <img src="images/icons/icon-houses-completed.png" alt="Более 60 построенных домов и счастливых семей" class="advantages__icon-img">
+                        </div>
+                        <h3 class="advantages__item-title">Более 60 построенных домов и счастливых семей</h3>
+                        <p class="advantages__item-text">Реальный опыт и доверие наших клиентов</p>
+                    </div>
                 </div>
                 <div class="advantages__cta">
                     <a href="#calculator" class="btn btn--secondary">Задать вопрос специалисту</a>
