--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -14,6 +14,9 @@
                     <li class="nav__item"><a href="#about" class="nav__link">О компании</a></li>
                     <li class="nav__item"><a href="#contacts" class="nav__link">Контакты</a></li>
                 </ul>
+                <div class="hero__contacts" id="hero-contacts">
+                    <!-- Контакты будут загружены динамически из data/contacts.json -->
+                </div>
                 <button class="nav__burger" aria-label="Открыть меню">
                     <span></span>
                     <span></span>
