--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -7,7 +7,10 @@
             </div>
             <div class="hero__container">
                 <div class="hero__content">
-                    <h1 class="hero__title">Строительство домов в г.&nbsp;Белгород и Белгородском районе</h1>
+                    <h1 class="hero__title">
+                        <span class="hero__title-line">Строительство домов</span>
+                        <span class="hero__title-line">в г. Белгороде и Белгородском районе</span>
+                    </h1>
                     <div class="hero__badge">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="currentColor"/>
